--- a/aik-app/aik-manager/src/main/webapp/templates/login_error.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/login_error.html
@@ -4,26 +4,44 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title></title>
 </head>
-<link href="$!webPath/resources/style/system/manage/$!{config.websiteCss}/template.css"  rel="stylesheet" type="text/css"/>
+<link th:href="@{/static/assets/plugins/font-awesome/css/font-awesome.min.css}" rel="stylesheet" type="text/css"/>
+<link th:href="@{/static/assets/plugins/bootstrap/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
+<link th:href="@{/static/assets/plugins/uniform/css/uniform.default.css}" rel="stylesheet" type="text/css"/>
+<!-- END GLOBAL MANDATORY STYLES -->
+<!-- BEGIN PAGE LEVEL STYLES -->
+<link rel="stylesheet" type="text/css" th:href="@{/static/assets/plugins/select2/select2.css}"/>
+<link rel="stylesheet" type="text/css" th:href="@{/static/assets/plugins/select2/select2-metronic.css}"/>
+<!-- END PAGE LEVEL SCRIPTS -->
+<!-- BEGIN THEME STYLES -->
+<link th:href="@{/static/assets/css/style-metronic.css}" rel="stylesheet" type="text/css"/>
+<link th:href="@{/static/assets/css/style.css}" rel="stylesheet" type="text/css"/>
+<link th:href="@{/static/assets/css/style-responsive.css}" rel="stylesheet" type="text/css"/>
+<link th:href="@{/static/assets/css/plugins.css}" rel="stylesheet" type="text/css"/>
+<link th:href="@{/static/assets/css/themes/default.css}" rel="stylesheet" type="text/css" id="style_color"/>
+<link th:href="@{/static/assets/css/pages/login-soft.css}" rel="stylesheet" type="text/css"/>
+<link th:href="@{/static/assets/css/custom.css}" rel="stylesheet" type="text/css"/>
 <body>
 <div class="cont">
+  <input type="hidden" id="basePath" name="basePath" value="http://localhost/aik-manager" th:value="${basePath}" />
+  
   <h1 class="seth1">系统消息</h1>
   <div class="bigok">
-    <div class="bigokimg"><img src="$!webPath/resources/style/system/manage/blue/images/error.jpg" width="121" height="113" /></div>
+    <div class="bigokimg"><img th:src="@{/static/assets/img/no_image.gif}" width="121" height="113" /></div>
     <div class="bigleft">
       <ul>
-        <li>$!{op_title}！</li>
-        <li class="hui">用户名、密码、验证码有至少一项不正确！</li>
-		<li class="hui">自动为您跳转到刚才的页面！</li>
-        <li class="successbtn"><a href="$!webPath/admin/login.htm">返回上一页</a></li>
+        <li>登陆失败！</li>
+        <li class="hui">用户名、密码有至少一项不正确！</li>
+		<li class="hui">3秒后自动为您跳转到登陆界面！</li>
+        <li class="successbtn"><a th:href="@{/}">返回上一页</a></li>
       </ul>
     </div>
 	<script>
 	  var count=3;
+	  var basePath = document.getElementById(basePath).value;
 	  window.setInterval(go,1000);
 	  function go(){
 	    count--;
-	    if(count==0) window.location.href="$!webPath/admin/login.htm";
+	    if(count==0) window.location.href= basePath + "/";
 	  }
 	</script>
   </div>
