--- a/aik-app/aik-manager/src/main/webapp/templates/user/userManage.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/user/userManage.html
@@ -34,7 +34,7 @@
 									<div class="form-group">
 										<label class="control-label col-md-3">真实姓名</label>
 										<div class="col-md-9">
-											<input type="text" class="form-control" name="trueName" />
+											<input type="text" class="form-control" name="realName" />
 										</div>
 									</div>
 								</div>
@@ -44,9 +44,13 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
-										<label class="control-label col-md-3">证件号码</label>
+										<label class="control-label col-md-3">性别</label>
 										<div class="col-md-9">
-											<input type="text" class="form-control" name="identityCard"/>
+											<select class="form-control" name="sex">
+												<option value="" selected ="selected">无限制</option>
+												<option value="0">男</option>
+												<option value="1">女</option>
+											</select>
 										</div>
 									</div>
 								</div>
