--- a/aik-app/aik-manager/src/main/webapp/templates/user/userView.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/user/userView.html
@@ -35,12 +35,12 @@
 				<tr>
 					<td>真实姓名</td>
 					<td>
-						<input type="text" class="form-control r" data-required="true"  data-description="trueName"  data-describedby="trueNamespan" id="trueName" name="trueName" placeholder="真实姓名" value=""/>
+						<input type="text" class="form-control r" data-required="true"  data-description="trueName"  data-describedby="trueNamespan" id="trueName" name="trueName" placeholder="真实姓名" value="" th:value="${accUserAccount.realName}"/>
 						<span class="required">*</span>
 						<span class="help-inline prompt" id="trueNamespan" style="color: #000000"></span>
 					</td>
 					<td> 昵称</td>
-					<td><input type="text" class="form-control" name="nice" value=""/></td>
+					<td><input type="text" class="form-control" name="nice" value="" th:value="${accUserAccount.nickName}"/></td>
 				</tr>
 				<tr>
 					<td>QQ</td>
@@ -56,7 +56,7 @@
 					<td><input type="text"  class="form-control" name="address" value="" /></td>
 					<td> 邮箱</td>
 					<td>
-						<input type="text" class="form-control r" data-required="true" data-pattern="^([\.a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(\.[a-zA-Z0-9_-])+" data-description="email" data-describedby="emailspan"  name="email" id="email" placeholder="Email" value=""/>
+						<input type="text" class="form-control r" data-required="true" data-pattern="^([\.a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(\.[a-zA-Z0-9_-])+" data-description="email" data-describedby="emailspan"  name="email" id="email" placeholder="Email" value="" />
 						<span class="required">*</span>
 						<span class="help-inline prompt" id="emailspan" style="color: #000000"></span>
 					</td>
@@ -65,17 +65,10 @@
 				<tr>
 					<td>手机号码</td>
 					<td>
-						<input type="text" class="form-control r" data-required="true"  data-pattern="^0?1(3|5|8|7)\d{9}$" data-description="mobile" data-describedby="mobilespan" id="mobileNo" name="mobileNo" placeholder="手机号码" value=""/>
+						<input type="text" class="form-control r" data-required="true"  data-pattern="^0?1(3|5|8|7)\d{9}$" data-description="mobile" data-describedby="mobilespan" id="mobileNo" name="mobileNo" placeholder="手机号码" value="" th:value="${accUserAccount.mobileNo}"/>
 						<span class="required">*</span>
 						<span class="help-inline prompt" id="mobilespan" style="color: #000000"></span>
 					</td>
-					<td>固定电话</td>
-					<td>
-						<input type="text" class="form-control" id="telephone" name="telephone" placeholder="固定电话" value="" />
-					</td>
-				</tr>
-				
-				<tr>
 					<td> 性别</td>
 					<td>
 						<select class="form-control" name="sex">
@@ -84,8 +77,6 @@
 						</select>
 						<span class="help-inline prompt" id="sexspan" style="color: #000000"></span>
 					</td>
-					<td></td>
-					<td></td>
 				</tr>
 				
 				<tr>
