--- a/aik-app/aik-manager/src/main/webapp/templates/user/userList.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/user/userList.html
@@ -53,16 +53,16 @@
 
 <div class="row">
 	<div class="col-md-5 col-sm-12">
-		<div class="dataTables_info" id="sample_1_info">总数<span th:text="${total}"></span>条</div>
+		<div class="dataTables_info" id="sample_1_info">总数<span th:text="${total}"></span>条,每页显示<span th:text="${pageSize}"></span>条</div>
 	</div>
 	<div class="col-md-7 col-sm-12">
 	
 		<div class="dataTables_paginate paging_bootstrap">
 			<ul id="page_id" class="pagination" style="visibility: visible;">
-					<li class="prev  disabled"><a title="上一页" href="javascript:;"><i class="fa fa-angle-left"></i></a></li>
-					<li data-pre="gar" class="active"><a href="javascript:;" data-pre="2">2</a></li>
-					<li data-pre="gar"><a href="javascript:;" data-pre="3">3</a></li>
-					<li data-pre="gar" class="next"><a data-pre="3" title="下一页" href="javascript:;"><i class="fa fa-angle-right"></i></a></li>
+					<li data-pre="gar" th:class="${pageInfo.hasPreviousPage}? 'prev' : 'prev disabled' "><a th:id="${pageInfo.prePage}" title="上一页" href="javascript:;"><i class="fa fa-angle-left"></i></a></li>
+					<li  class="active"><a href="javascript:;" th:id="${pageNo}"><span th:text="${pageInfo.prePage}"></span></a></li>
+					<li  class="active"><a href="javascript:;" th:id="${pageNo}"><span th:text="${pageInfo.nextPage}"></span></a></li>
+					<li data-pre="gar" th:class="${pageInfo.hasNextPage}? 'next' : 'next disabled'"><a th:id="${pageInfo.nextPage}" title="下一页" href="javascript:;"><i class="fa fa-angle-right"></i></a></li>
 			</ul>
 		</div>
 	</div>
