--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -124,7 +124,7 @@
 						用户管理</a>
 					</li>
 					<li >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/order/campingBookMg.htm">
+						<a href="javascript:;" data-pre="a-menu" data-url="/doctors/index">
 						医生管理</a>
 					</li>
 					<li >
@@ -147,7 +147,7 @@
 						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preImgUploadSet.htm">上传设置</a>
 					</li> -->
 					<li >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preSeoSet.htm" >医生管理</a>
+						<a href="javascript:;" data-pre="a-menu" data-url="/doctors/index" >医生管理</a>
 					</li>
 				</ul>
 			</li>
