--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
-<!--[if !IE]><!--> <html lang="zh-cn" class="no-js"> <!--<![endif]-->
+<!--[if !IE]><!-->
+<html lang="zh-cn" class="no-js" xmlns:th="http://www.w3.org/1999/xhtml"> <!--<![endif]-->
 <!-- BEGIN HEAD -->
 <head>
 	<meta charset="utf-8" />
@@ -240,16 +241,33 @@
 			<li class="user-menu">
 				<a href="javascript:;">
 				<i class="fa fa-table"></i> 
-				<span class="title">平台管理</span>
+				<span class="title">基础数据管理</span>
 				<span class="arrow "></span>
 				</a>
 				<ul class="sub-menu">
-					<li >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preAdminManage.htm" >基础数据管理</a>
+					<li>
+						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preAdminManage.htm" >平台简介</a>
+					</li>
+					<li>
+						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preAdminManage.htm" >意见反馈</a>
+					</li>
+					<li>
+						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preAdminManage.htm" >帮助中心</a>
 					</li>
 				</ul>
 			</li>
-			
+			<li class="user-menu">
+				<a href="javascript:;">
+					<i class="fa fa-table"></i>
+					<span class="title">既往病史管理</span>
+					<span class="arrow "></span>
+				</a>
+				<ul class="sub-menu">
+					<li>
+						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preAdminManage.htm" >病历信息管理</a>
+					</li>
+				</ul>
+			</li>
 		</ul>
 			
 		</div>
