--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -155,15 +155,15 @@
 				<a href="javascript:;">
 					<i class="fa fa-gift"></i>
 					<span class="title">
-						饮食管理
+						食物库管理
 					</span>
 					<span class="arrow">
 					</span>
 				</a>
 				<ul class="sub-menu">
 					<li class="tooltips" data-container="body" data-placement="right" data-html="true"  >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/campingAreaSet/preCampingSet.htm">
-							食物库管理
+						<a href="javascript:;" data-pre="a-menu" data-url="/foods/index">
+							食物管理
 						</a>
 					</li>
 					<li>
