--- a/aik-app/aik-manager/src/main/webapp/templates/food/foodAdd.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/food/foodAdd.html
@@ -2,7 +2,7 @@
 <div class="portlet box blue">
 	<div class="portlet-title">
 		<div class="caption">
-			<i class="fa fa-reorder"></i>医生添加
+			<i class="fa fa-reorder"></i>食物添加
 		</div>
 		<div class="tools">
 			<a href="javascript:;" class="collapse">
@@ -12,93 +12,76 @@
 		</div>
 	</div>
 	<div class="portlet-body form">
-		<form class="form-inline"  method ="post" action="" id="doctorAdd" enctype="multipart/form-data">
-			<input type="hidden" class="form-control" name="userRole" value="USER" />
+		<form class="form-inline"  method ="post" action="" id="foodAdd" enctype="multipart/form-data">
 			<table class="table  table-bordered ">
 				<tr>
-					<td> 用户名</td>
+					<td>食物名称</td>
 					<td>
-						<input type="text" class="form-control r" data-required="true" data-pattern="[a-zA-Z0-9]{6,16}" data-description="userName" data-describedby="userNamespan"  id="userName" placeholder="登录帐号"  name="userName" />
+						<input type="text" class="form-control r" data-required="true"  data-description="name"  data-describedby="namespan" id="name" name="name"  />
 						<span class="required">*</span>
-						<span class="help-inline prompt" id="userNamespan" style="color: #000000"></span>
+						<span class="help-inline prompt" id="namespan" style="color: #000000"></span>
 					</td>
-					<td>密码</td>
+					<td>食物类别</td>
 					<td>
-						<input type="password" class="form-control r" data-required="true" data-pattern="[a-zA-Z0-9]{6,16}" data-description="password" data-describedby="passwordspan"  name="password" id="password" placeholder="密码" />
-						 <span class="required">*</span>
-						 <span class="help-inline prompt" id="passwordspan" style="color: #000000">6-16位字母，数字</span>
+						<input type="text" class="form-control r" data-required="true"  data-description="category"  data-describedby="categoryspan" id="category" name="category"  />
+						<span class="required">*</span>
+						<span class="help-inline prompt" id="categoryspan" style="color: #000000"></span>
 					</td>
 				</tr>
 				
 				<tr>
-					<td>真实姓名</td>
+					<td>食物亮点</td>
 					<td>
-						<input type="text" class="form-control r"  data-required="true"  data-description="trueName"  data-describedby="trueNamespan" id="trueName" name="trueName" placeholder="真实姓名" />
-						<span class="required">*</span>
-						<span class="help-inline prompt" id="trueNamespan" style="color: #000000"></span>
+						<select class="form-control" name="brightSpot">
+							<option value="-1" selected="selected">无</option>
+							<option value="1">GI最低</option>
+						</select>
 					</td>
-					<td> 职位</td>
-					<td><input type="text" class="form-control" name="position" value="" /></td>
+					<td>食物亮点排名</td>
+					<td><input type="text" class="form-control" name="spotRank" value="" /></td>
 				</tr>
-				
-				
-				
-				<td>执行医院</td>
-					<td><input type="text" class="form-control"  id="hosName"  name="hosName" value="" /></td>
-					<td>科室</td>
-					<td><input type="text" class="form-control" name="hosDepartment" value="" /></td>
+					<td>蛋白质比例</td>
+					<td><input type="text" class="form-control"  id="proteinRadio"  name="proteinRadio" value="" /></td>
+					<td>脂肪比例</td>
+					<td><input type="text" class="form-control" name="fatRadio" value="" /></td>
 				
 				<tr>
-					<td>科室电话</td>
-					<td><input type="text"  class="form-control" name="departmentPhone" value="" /></td>
-					<td> 擅长病症</td>
+					<td>碳水化合物比例</td>
+					<td><input type="text"  class="form-control" name="carbsRadio" value="" /></td>
+					<td>营养膳食</td>
 					<td>
-						<input type="text" class="form-control"  name="skill" id="skill"  value="" />
-					</td>
-				</tr>
-				
-				<tr>
-					<td> 手机号码</td>
-					<td>
-						<input type="text" class="form-control r" data-required="true"  data-pattern="^0?1(3|5|8|7)\d{9}$" data-description="mobile" data-describedby="mobilespan"  id="mobileNo" name="mobileNo" placeholder="手机号码" />
-						<span class="required">*</span>
-						<span class="help-inline prompt" id="mobilespan" style="color: #000000"></span>
-					</td>
-					<td> 性别</td>
-					<td>
-						<select class="form-control" name="sex">
-							<option value="0" selected="selected">男</option>
-							<option value="1">女</option>
+						<select class="form-control" name="type">
+							<option value="0" selected="selected">膳食</option>
+							<option value="1">营养</option>
 						</select>
 					</td>
 				</tr>
 				
 				<tr>
-					<td> 固定电话</td>
+					<td>食物份量单位</td>
 					<td>
-						<input type="text" class="form-control"  id="telephone" name="telephone" placeholder="固定电话" />
+						<input type="text" class="form-control "  name="weightUnit" value="" />
 					</td>
-					<td> 有效性</td>
+					<td> 每份重量</td>
+					<td>
+						<input type="text" class="form-control "  name="weight" value="" />
+					</td>
+				</tr>
+				
+				<tr>
+					<td> 推荐|禁食</td>
+					<td>
+						<select class="form-control" name="recommend">
+							<option value="false" selected="selected">推荐</option>
+							<option value="true">禁食</option>
+						</select>
+					</td>
+					<td>有效性</td>
 					<td>
 						<select class="form-control" name="deleteStatus">
 							<option value="false" selected="selected">有效</option>
 							<option value="true">无效</option>
 						</select>
-					</td>
-				</tr>
-				
-				<tr>
-					<td> 证件类型</td>
-					<td>
-						<!-- <select class="form-control" name="identityType">
-							#foreach ($codecode in $codeList)
-							<option value="$codecode.id" 
-								>$codecode.codeCName</option>
-							#end
-						</select> -->
-					</td>
-					<td> 证件号码</td>
-					<td><input type="text" class="form-control" name="identityCard" />
 					</td>
 				</tr>
 				<tr>
@@ -148,9 +131,9 @@
 </div>
 
 <script>
-	window.doctorAdd = null;
-    var doctorAdd = {
-    		fm : jQuery("#doctorAdd"),
+	window.foodAdd = null;
+    var foodAdd = {
+    		fm : jQuery("#foodAdd"),
     		
     		basePath : jQuery("#basePath").val(),
     		//初始化
@@ -182,7 +165,7 @@
     			jQuery('#tabli_11').trigger('click'),
 				jQuery('#tabli_2').remove(),
 				jQuery('#tab_2').remove(),
-				doctorPage.load(1);
+				foodPage.load(1);
     		},
     		//提交数据
     		onSubmit: function(){
@@ -211,7 +194,7 @@
     			var _this = this;
     			Ajax.requestSubmit({
     				fm: _this.fm,
-    				url: _this.basePath + '/doctors/save',
+    				url: _this.basePath + '/foods/save',
     				type: "post",
     				success: function(data){
     					if(!data) return;
@@ -290,6 +273,6 @@
  </script> 
 <script>
 jQuery(document).ready(function(){    
-	doctorAdd.init();
+	foodAdd.init();
 });
 </script>
