--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -167,8 +167,8 @@
 						</a>
 					</li>
 					<li>
-						<a href="javascript:;" data-pre="a-menu" data-url="camping/campingProductManage.htm">
-							饮食规范管理
+						<a href="javascript:;" data-pre="a-menu" data-url="/foodCategorys/index">
+							食物分类管理
 						</a>
 					</li>
 					<li>
