--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -173,6 +173,11 @@
 						</a>
 					</li>
 					<li>
+						<a href="javascript:;" data-pre="a-menu" data-url="/foodCollects/index">
+							食物收藏管理
+						</a>
+					</li>
+					<li>
 						<a href="javascript:;" data-pre="a-menu" data-url="camping/campingTypeManage.htm">
 							营养指标管理
 						</a>
