--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -249,7 +249,7 @@
 						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preAdminManage.htm" >平台简介</a>
 					</li>
 					<li>
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preAdminManage.htm" >意见反馈</a>
+						<a href="javascript:;" data-pre="a-menu" data-url="/feedback/index" >意见反馈</a>
 					</li>
 					<li>
 						<a href="javascript:;" data-pre="a-menu" data-url="/admin/officesite/preAdminManage.htm" >帮助中心</a>
