--- a/aik-app/aik-manager/src/main/webapp/templates/foodCollect/foodCollectList.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/foodCollect/foodCollectList.html
@@ -15,8 +15,8 @@
 
 <tr class="odd gradeX"  th:each="foodCollect,iterStat : ${result}"  >
 	<td th:id="${foodCollect.id}" th:text="${foodCollect.id}"></td>
-	<td th:text="${foodCollect.userId}"></td>
-	<td class="center" th:text="${foodCollect.foodId}"></td>
+	<td th:text="${foodCollect.userName}"></td>
+	<td class="center" th:text="${foodCollect.foodName}"></td>
 	<td>
 	</td>
 </tr>			
