--- a/aik-app/aik-manager/src/main/webapp/templates/index.html
+++ b/aik-app/aik-manager/src/main/webapp/templates/index.html
@@ -177,21 +177,35 @@
 							食物收藏管理
 						</a>
 					</li>
+				</ul>
+			</li>
+			
+			<li class="user-menu">
+				<a href="javascript:;">
+					<i class="fa fa-gift"></i>
+					<span class="title">
+						饮食计划管理
+					</span>
+					<span class="arrow">
+					</span>
+				</a>
+				<ul class="sub-menu">
+					<li class="tooltips" data-container="body" data-placement="right" data-html="true"  >
+						<a href="javascript:;" data-pre="a-menu" data-url="/dietPlans/index">
+							饮食每日计划管理
+						</a>
+					</li>
 					<li>
-						<a href="javascript:;" data-pre="a-menu" data-url="camping/campingTypeManage.htm">
-							营养指标管理
+						<a href="javascript:;" data-pre="a-menu" data-url="/dietRecords/index">
+							饮食每日实际记录管理
 						</a>
 					</li>
-					<li class="tooltips" data-container="body" data-placement="right" data-html="true"  >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/campingAreaSet/preAreaSet.htm">
-							饮食计划管理
+					<li>
+						<a href="javascript:;" data-pre="a-menu" data-url="/foodCollects/index">
+							营养元素摄于量对比分析
 						</a>
 					</li>
-					<li class="tooltips" data-container="body" data-placement="right" data-html="true"  >
-						<a href="javascript:;" data-pre="a-menu" data-url="/admin/campingAreaSet/preAreaSet.htm">
-							体重管理
-						</a>
-					</li>
+					
 				</ul>
 			</li>
 			<li class="user-menu">
